--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>Hello world!</p>
-    <img src="/images/New Year Photo.png" alt="" />
+    <img src="images/New Year Photo.png" alt="" />
   </body>
 </html>
