added banner section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New year new mission</title>
+    <link rel="stylesheet" href="styles/New-mission.css" />
+    <link rel="stylesheet" href="
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <p>Hello world!</p>
-    <img src="images/New Year Photo.png" alt="" />
+    <header>
+      <section class="banner">
+        <div class="banner-container">
+          <h4 class="banner-greetings">Happy New Year</h4>
+          <h1 class="banner-title">New Year Party<br />Celebration</h1>
+        </div>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
