completed discount section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
           <h1 class="banner-title">New Year Party<br />Celebration</h1>
         </div>
       </section>
+      <section class="discount-section">
+        <div class="discount-container">
+          <h1 class="discount-rate">65% OFF</h1>
+          <p class="discount-motto">OUR HOLIDAY DEALS ARE BETTER</p>
+          <h2 class="discount-categories">ALL CATEGORIES</h2>
+          <img
+            src="../images/New Year Photo.png"
+            alt="Happy New Year!"
+            class="discount-image"
+          />
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
