new year photos issue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="discount-motto">OUR HOLIDAY DEALS ARE BETTER</p>
           <h2 class="discount-categories">ALL CATEGORIES</h2>
           <img
-            src="../images/New Year Photo.png"
+            src="images/New Year Photo.png"
             alt="Happy New Year!"
             class="discount-image"
           />
