--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
           />
         </div>
       </section>
+      <section class="welcome-section">
+        <div class="welcome-container">
+          <div class="text-column">
+            <h1 class="welcome">Welcome to <br />midnight party</h1>
+            <p class="welcome-description">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+            <button class="welcome-button">JOIN NOW</button>
+          </div>
+          <div class="logo-column">
+            <img src="/images/Group 70.png" alt="Celebration image" />
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
