minor issue in celebration image

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
           <div class="text-column">
             <h1 class="welcome">Welcome to <br />midnight party</h1>
             <p class="welcome-description">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas
-              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
-              vel euismod.
+              Join us tonight for experiencing the best new year celebration of
+              your life! We are offering different packages to suit your needs.
             </p>
             <button class="welcome-button">JOIN NOW</button>
           </div>
