issue solve attempt 2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button class="welcome-button">JOIN NOW</button>
           </div>
           <div class="logo-column">
-            <img src="../images/Group 70.png" alt="Celebration image" />
+            <img src="images/Group 70.png" alt="Celebration image" />
           </div>
         </div>
       </section>
