--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           <h1 class="banner-title">New Year Party<br />Celebration</h1>
         </div>
       </section>
+    </header>
+    <main>
       <section class="discount-section">
         <div class="discount-container">
           <h1 class="discount-rate">65% OFF</h1>
@@ -48,8 +50,16 @@
           </div>
         </div>
       </section>
-    </header>
-    <main></main>
+      <section class="address">
+        <div class="address-container">
+          <pre class="total-address">
+            <span class="text-color">Place:</span> New Park Hotel
+            <span class="text-color">Date:</span> 31 December Night 2023
+            <span class="text-color">Time:</span> Evening 7.30 pm to 12.30 am</pre>
+          <button class="address-button">JOIN NOW</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
