coming soon section finished

--- a/index.html
+++ b/index.html
@@ -59,6 +59,36 @@
           <button class="address-button">JOIN NOW</button>
         </div>
       </section>
+      <section class="coming-soon">
+        <div class="coming-soon-container">
+          <div class="column-1">
+            <h3 class="new-offer">NEW BEST OFFER</h3>
+            <h2 class="new-offer-time">Coming Soon</h2>
+            <p class="offer-description">
+              We are thrilled to announce a special discount offer just for you!
+              Starting from 2024 until 2025, enjoy a massive off on all items in
+              our store!
+            </p>
+          </div>
+          <div class="column-2">
+            <img
+              src="images/Ellipse 1.png"
+              alt="fireworks"
+              class="fireworks-png"
+            />
+          </div>
+          <div class="column-3">
+            <h2 class="year">2024</h2>
+            <p class="new-year-motto">
+              May the new year bring peace and prosperity in your life!We wish a
+              you a very happy new year.
+            </p>
+            <div class="new-year-png">
+              <img src="images/Group 96.png" alt="2024" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
