added holiday sales section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
           </div>
         </div>
       </section>
+      <section class="holiday-sales">
+        <div class="holiday-sales-container">
+          <p class="upper-text">BUY EXCITING ITEMS!</p>
+          <h2 class="sales-tag">
+            <span class="holidays-style">Holidays</span> Sale 50%
+          </h2>
+          <p class="sales-description">
+            Step right into our store for the most exciting sale of the year!
+            We’re offering unbeatable discounts on a wide range of products,
+            just in time for the holiday season. From the latest tech gadgets to
+            cozy home decor, stylish apparel to fun toys for kids, we’ve got
+            something for everyone on your list. Plus, enjoy free gift wrapping
+            on all purchases!
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
