holiday issue check 1

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           </p>
         </div>
       </section>
+      <section class="holiday-banner"></section>
     </main>
     <footer></footer>
   </body>
