holiday banner complete

--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
           </p>
         </div>
       </section>
-      <section class="holiday-banner"></section>
+      <section class="holiday-banner">
+        <div class="girl-percentage">
+          <img src="images/Rectangle 1.png" alt="" class="girl" />
+          <img src="images/Group 44.png" alt="" class="percentage" />
+        </div>
+        <div class="box-image">
+          <img src="images/Group 75.png" alt="" class="box" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
