completed image gallery section

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <h2 class="new-offer-time">Coming Soon</h2>
             <p class="offer-description">
               We are thrilled to announce a special discount offer just for you!
-              Starting from 2024 until 2025, enjoy a massive off on all items in
-              our store!
+              Starting from 2024 until 2025, enjoy a massive discount on all
+              items in our store!
             </p>
           </div>
           <div class="column-2">
@@ -112,6 +112,25 @@
         </div>
         <div class="box-image">
           <img src="images/Group 75.png" alt="" class="box" />
+        </div>
+      </section>
+      <section class="portfolio">
+        <div class="portfolio-texts">
+          <h3 class="gift-tag">THE BEST GIFTS</h3>
+          <h2 class="gift-title">Our Awesome Portfolio</h2>
+          <p class="gift-description">
+            We provide awesome gift items of a huge variety within a reasonable
+            price.Our products are quality assured and sold all over the
+            world.Order today to get the best gift for your loved ones.
+          </p>
+        </div>
+        <div class="portfolio-gallery">
+          <img src="images/Rectangle 3.png" alt="" class="gallery-item" />
+          <img src="images/Rectangle 4.png" alt="" class="gallery-item" />
+          <img src="images/Rectangle 5.png" alt="" class="gallery-item" />
+          <img src="images/Rectangle 6.png" alt="" class="gallery-item" />
+          <img src="images/Rectangle 7.png" alt="" class="gallery-item" />
+          <img src="images/Rectangle 8.png" alt="" class="gallery-item" />
         </div>
       </section>
     </main>
