completed newsletter section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
           <img src="images/Rectangle 8.png" alt="" class="gallery-item" />
         </div>
       </section>
+      <section class="newsletter">
+        <div class="newsletter-container">
+          <img src="images/Group 61.png" alt="" class="email-logo" />
+          <h1 class="subscribe">Subscribe Newsletter</h1>
+          <p class="subscribe-description">
+            Are you a fan of unique and thoughtful gifts? Do you love surprising
+            your loved ones with the perfect presents? If so, we have something
+            special for you!Subscribe to our newsletter and be the first to know
+            about our new arrivals, exclusive discounts, and special events.
+          </p>
+          <label for="s-button" class="label-align"></label>
+          <button class="subscribe-button" id="s-button"></button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
