--- a/index.html
+++ b/index.html
@@ -156,6 +156,33 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer-section">
+        <div class="footer-container">
+          <div class="left">
+            <p class="footer-address">
+              44, Big Building Roosevelt Street Beach Gardens Florida 33410
+            </p>
+            <p class="copyrights">2017, All Rights Reserved.</p>
+          </div>
+          <div class="middle">
+            <img src="images/Facebook.png" alt="" />
+            <img src="images/Twitter.png" alt="" />
+            <img src="images/Instagram.png" alt="" />
+            <img src="images/Linkedin.png" alt="" />
+          </div>
+          <div class="right">
+            <div class="phone">
+              <img src="images/Call.png" alt="" />
+              <p class="number">+00 123 584 124</p>
+            </div>
+            <div class="website">
+              <img src="images/Website.png" alt="" />
+              <p class="web-address">www.website.com</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
