added unsubscribe button

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
               <img src="images/Website.png" alt="" />
               <p class="web-address">www.website.com</p>
             </div>
+            <button class="unsubscribe">Unsubscribe</button>
           </div>
         </div>
       </section>
